force-app/main/default/objects/Log_Opportunity_Linkage__c/Log_Opportunity_Linkage__c.object-meta.xml
<CustomObject>
    <label>Quote Opportunity Linkage Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Opportunity Linkage Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>