force-app/main/default/objects/Log_Opportunity_Linkage__c/fields/Account_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Code__c</fullName>
    <label>Account Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>