force-app/main/default/objects/Log_Opportunity_Linkage__c/fields/ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Number__c</fullName>
    <label>ERP Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>