force-app/main/default/objects/Log_Opportunity_Linkage__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Last_Modified_Date</label>
    <type>DateTime</type>
</CustomField>