force-app/main/default/objects/Log_Opportunity_Linkage__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <label>MCN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>