force-app/main/default/objects/Log_Opportunity_Linkage__c/fields/Quote_Name_Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name_Opportunity_Detail__c</fullName>
    <label>Quote Name/ Opportunity Detail</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>