force-app/main/default/objects/Log_Opportunity_Linkage__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>10</length>
    <type>Text</type>
</CustomField>