force-app/main/default/objects/Log_Opportunity_Linkage__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>